[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 118.0
margin_top = 51.0
margin_right = 257.0
margin_bottom = 128.0
text = "Botão 1"

[node name="Button2" type="Button" parent="."]
margin_left = 117.0
margin_top = 242.0
margin_right = 256.0
margin_bottom = 319.0
text = "Botão 2"

[node name="Button3" type="Button" parent="."]
margin_left = 123.0
margin_top = 434.0
margin_right = 262.0
margin_bottom = 511.0
text = "Botão 3"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 511.0
margin_top = 399.0
margin_right = 715.0
margin_bottom = 481.0

[node name="LineEdit1" type="LineEdit" parent="."]
margin_left = 512.0
margin_top = 106.0
margin_right = 708.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="."]
margin_left = 510.0
margin_top = 84.0
margin_right = 738.0
margin_bottom = 160.0
text = "Ponha numero,"

[node name="Label2" type="Label" parent="."]
margin_left = 517.0
margin_top = 352.0
margin_right = 786.0
margin_bottom = 425.0
text = "Coloca um nome "

[node name="Label3" type="Label" parent="."]
margin_left = 759.0
margin_top = 32.0
margin_right = 987.0
margin_bottom = 108.0
text = ":"

[node name="Label4" type="Label" parent="."]
margin_left = 729.0
margin_top = 264.0
margin_right = 943.0
margin_bottom = 372.0
text = ":"

[node name="Label5" type="Label" parent="."]
margin_left = 731.0
margin_top = 432.0
margin_right = 1007.0
margin_bottom = 577.0
text = ":"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
